--- a/mycroft/client/webchat/templates/index.html
+++ b/mycroft/client/webchat/templates/index.html
@@ -1,60 +1,133 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>Jarbas Web Chat Client</title>
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="cleartype" content="on">
-
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="/static/css/todc-bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="/static/css/app.css">
-    <link rel="stylesheet" href="/static/css/font-awesome.css">
+<!DOCTYPE HTML>
+<html lang="en">
 
 
-    <script type="text/javascript">
-        function detectmob() {
-            if (typeof window.orientation !== 'undefined') {
-                return true;
-            }
-            return false;
-        }
-    </script>
-</head>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<body>
+		<title>Jarbas A.I.</title>
+		<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../static/css/fonte.css"/>
+		<link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900&amp;subset=latin-ext" rel="stylesheet">
 
 
-    <div class="container">
-        <div class="right">
-            <div class="chat" data-chat="person2">
-            </div>
-            <div style="display: none;" id="writer" class="write" >
-		<div class="row">
-		    <div class="form-group" >
-			<div class="col-xs-11">
-				<input type="text" name="body" id="textbox" class="form-control"/>
-			</div>
-			<div class="col-xs-1">
-				<button type="submit" id="textbox_submit" class="btn btn-primary pull-right btn-lg RbtnMargin">Send&nbsp;<i class="fa fa-volume-up"></i></button>
-			</div>
-		    </div>
-		</div>
-            </div>
+	</head>
+
+<body data-spy="scroll" data-target="#bs-example-navbar-collapse-1" data-offset="300">
+
+<div class="backg">
+
+  <div class="container">
+
+    <div class="jarbas">
+
+        <div class="write" id="writer">
+
+          <div class="gra">
+            <div class="chat" data-chat="person2"></div>
+            <div style="display: none;" id="writer" class="write" ></div>
+          </div>
+
         </div>
+
+        <div class="input-group">
+          <input type="text" class="form-control"  id="textbox" placeholder="Ask me anything..." style="border-radius: 10px;">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="submit"  id="textbox_submit" style="border-radius: 10px;">ASK</button>
+          </span>
+        </div><!-- /input-group -->
+
     </div>
 
+  </div>
 
-    <script src="/static/js/jquery-3.2.1.min.js"></script>
-    <script src="/static/js/app.js"></script>
-    <script type="application/javascript">set_ip("{{ip}}");</script>
-    <script type="application/javascript">set_port("{{port}}");</script>
-    <script type="text/javascript">
-        document.getElementById('writer').style.display = 'block';
-    </script>
+</div>
+
+<div class="answer">
+  
+  <div class="container">
+
+    <h2>Data:</h2>
+
+    <div class="row">
+      <div class="col-md-4">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam faucibus pulvinar felis ac posuere. Praesent tristique lacus eu mi vulputate, vel euismod ex lobortis. Curabitur nunc tortor, sollicitudin ac eleifend a, bibendum at libero. Vivamus rutrum a mi a convallis. Donec tincidunt ligula justo. </p>
+      </div>
+      <div class="col-md-4">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam faucibus pulvinar felis ac posuere. Praesent tristique lacus eu mi vulputate, vel euismod ex lobortis. Curabitur nunc tortor, sollicitudin ac eleifend a, bibendum at libero. Vivamus rutrum a mi a convallis. Donec tincidunt ligula justo. </p>
+      </div>
+      <div class="col-md-4">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam faucibus pulvinar felis ac posuere. Praesent tristique lacus eu mi vulputate, vel euismod ex lobortis. Curabitur nunc tortor, sollicitudin ac eleifend a, bibendum at libero. Vivamus rutrum a mi a convallis. Donec tincidunt ligula justo. </p>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+<div class="moreinfo">
+  
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-12">
+        <h2>More info...</h2> 
+
+        <!-- tab nav -->
+        <ul class="nav nav-tabs">
+          <li><a href="#tab1" data-toggle="tab">Info1</a></li>
+          <li><a href="#tab2" data-toggle="tab">Info2</a></li>
+          <li><a href="#tab3" data-toggle="tab">Info3</a></li>
+        </ul>
+        <!-- tab sections -->
+        <div class="tab-content">
+          <div class="tab-pane active" id="tab1">
+            <p>INFO1 INFO1 INFO1 INFO1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam faucibus pulvinar felis ac posuere. Praesent tristique lacus eu mi vulputate, vel euismod ex lobortis. Curabitur nunc tortor, sollicitudin ac eleifend a, bibendum at libero. Vivamus rutrum a mi a convallis. Donec tincidunt ligula justo.</p>
+          </div>
+          <div class="tab-pane" id="tab2">
+            <p>INFO2 INFO2 INFO2 INFO2 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam faucibus pulvinar felis ac posuere. Praesent tristique lacus eu mi vulputate, vel euismod ex lobortis. Curabitur nunc tortor, sollicitudin ac eleifend a, bibendum at libero. Vivamus rutrum a mi a convallis. Donec tincidunt ligula justo.</p>
+          </div>
+          <div class="tab-pane" id="tab3">
+            <p>INFO3 INFO3 INFO3 INFO3 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam faucibus pulvinar felis ac posuere. Praesent tristique lacus eu mi vulputate, vel euismod ex lobortis. Curabitur nunc tortor, sollicitudin ac eleifend a, bibendum at libero. Vivamus rutrum a mi a convallis. Donec tincidunt ligula justo.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+
+
+
+
+
+
+<!-- _________JAVASCRIPT_________ -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+<script src="../static/js/jquery-3.2.1.min.js"></script>
+
+<script src="../static/js/parallax.js"></script>
+
+<script src="../static/js/app.js"></script>
+<script type="application/javascript">set_ip("{{ip}}");</script>
+<script type="application/javascript">set_port("{{port}}");</script>
+<script type="text/javascript">
+  document.getElementById('writer').style.display = 'block';
+</script>
+
+
+<script src="../static/js/bootstrap.min.js" type="text/javascript"></script>
+
+
+
 
 </body>
 
