--- a/mycroft/client/webchat/templates/index.html
+++ b/mycroft/client/webchat/templates/index.html
@@ -10,7 +10,7 @@
 		<title>Jarbas A.I.</title>
 		<link rel="stylesheet" type="text/css" href="../static/css/bootstrap.css">
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="../static/css/fonte.css"/>
+		<link rel="stylesheet" type="text/css" href="../static/css/font-awesome.css"/>
 		<link rel="stylesheet" type="text/css" href="../static/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900&amp;subset=latin-ext" rel="stylesheet">
 
@@ -29,7 +29,7 @@
 
           <div class="gra">
             <div class="chat" data-chat="person2"></div>
-            <div style="display: none;" id="writer" class="write" ></div>
+            <div style="display: none;" id="writer2" class="write" ></div>
           </div>
 
         </div>
